[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osm-node"
version = "0.1.0"
description = "Extract and index control nodes (signals, stops, calming) from OSM PBF files"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "OSM Node Contributors" }
]
keywords = ["osm", "openstreetmap", "pbf", "routing", "traffic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "osmium>=3.7",
    "numpy>=1.24",
    "pyroaring>=1.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
osm-node = "osm_node.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
